--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,9 @@
 layout: default
 title: Home
 ---
+<h1><span>Plant A Tree is a project to help people plant trees - we can improve this splash a bit?</span></h1>
 
 {% for post in paginator.posts %}
-
 <article>
   <a href="{{ site.github.url }}{{ post.url }}">
     <div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/assets/img/{{ post.image }})"{% endif %}>
