better copy, more emoji

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,11 +2,16 @@
 layout: default
 title: Home
 ---
-<h1><span>Plant A Tree is a project to help people plant trees for birthdays, weddings, anniversaries, and other celebrations.</span></h1>
+<h1>
+  Plant A Tree is a project to help people plant trees for birthdays, weddings, anniversaries, and other celebrations.
+</h1>
+<h1>
+  We believe in planting indigenous trees, locally – and have assembled a collection of resources to help you do this!
+</h1>
+<h1>
+  Read on for resources about trees in your part of the world, how the site began, and more. 🌱🌿🌳🌲 
+</h1>
 
-<h1><span>We believe in planting indigenous trees, locally – and have assembled a collection of resources to help you do this!</h1>
-
-(This splash text still needs work and design work!)
 
 {% for post in paginator.posts %}
 <article>
