--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,7 +12,7 @@ $body-font-family: 'Roboto', sans-serif;
 
 $code-font-family: "Source Code Pro", monospace;
 
-$brand-color: black;
+$brand-color: darkgreen;
 
 $container-width: 1100px;
 
