--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,9 +6,9 @@
   Site variables
 */
 
-$base-font-family: 'Roboto', sans-serif;
+$base-font-family: 'Didot', serif;
 
-$body-font-family: 'Roboto', sans-serif;
+$body-font-family: 'Didot', serif;
 
 $code-font-family: "Source Code Pro", monospace;
 
