remove pagination buttons

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ title: Home
   We believe in planting indigenous trees, locally – and have assembled a collection of resources to help you do this! 🌿🌳
 </h1>
 <h1 class="home-header">
-  Read on for resources about trees in your part of the world, how the site began, and more. 🌳🌲
+  Read on for resources about tree-planting, how the site began, and more. 🌳🌲
 </h1>
 
 
@@ -24,7 +24,7 @@ title: Home
 
 {% endfor %}
 
-<!-- Pagination links -->
+<!-- Pagination links - turn this back on if we need it!
 <div class="pagination">
   {% if paginator.next_page %}
     <a class="pagination-button pagination-active next" href="{{ site.github.url }}{{ paginator.next_page_path }}">{{ site.data.settings.pagination.previous_page }}</a>
@@ -38,3 +38,4 @@ title: Home
       <span class="pagination-button">{{ site.data.settings.pagination.next_page }}</span>
   {% endif %}
 </div>
+-->
