add new post, change to celebratewithtrees
more trach

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 <h1 class="home-header">
-  Plant A Tree is a project to help people plant trees for birthdays, weddings, anniversaries, and other celebrations. 🌱🌿
+  Celebrate With Trees is a project to help people plant trees for birthdays, weddings, anniversaries, and other celebrations. 🌱🌿
 </h1>
 <h1 class="home-header">
   We believe in planting indigenous trees, locally – and have assembled a collection of resources to help you do this! 🌿🌳
